WTF, too much bugs

--- a/frontend/src/components/Message/Message.css
+++ b/frontend/src/components/Message/Message.css
@@ -1,7 +1,7 @@
 .message {
   display: flex;
-  width: 40vw;
-  height: 50px;
+  widht: 40vw;
+  heigth: 50px;
   font-size: 2rem;
   border: 1px solid black;
   background-color: white;
